--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
+    "@tabler/icons-react": "3.30.0",
+    "reveal-on-scroll-react": "^0.0.6",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
