--- a/package.json
+++ b/package.json
@@ -16,12 +16,14 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
+    "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
     "next": "15.1.7",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
+    "react-intersection-observer": "^9.15.1",
     "reveal-on-scroll-react": "^0.0.6",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
