--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-tabs": "^1.1.3",
     "@tabler/icons-react": "3.30.0",
     "@vercel/analytics": "^1.1.1",
     "chart.js": "^4.4.7",
