--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
     "lucide-react": "^0.475.0",
-    "next": "15.1.7",
+    "next": "^15.2.4",
     "next-sitemap": "^4.2.3",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
