--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-icons": "^5.4.0",
     "react-intersection-observer": "^9.15.1",
     "reveal-on-scroll-react": "^0.0.6",
+    "schema-dts": "^1.1.5",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
