--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.7",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.475.0",
     "next": "^15.2.4",
     "next-sitemap": "^4.2.3",
