--- a/.gitignore
+++ b/.gitignore
@@ -33,6 +33,9 @@ yarn-error.log*
 # env files (can opt-in for committing if needed)
 .env*
 
+# firebase
+lib/firebase-admin-service-key.json
+
 # vercel
 .vercel
 
