--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lexpertpro",
+  "name": "lexpert",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -11,11 +11,25 @@
   },
   "dependencies": {
     "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toast": "^1.2.14",
     "@tabler/icons-react": "3.30.0",
+    "@tiptap/extension-color": "^3.0.7",
+    "@tiptap/extension-highlight": "^3.0.7",
+    "@tiptap/extension-image": "^3.0.7",
+    "@tiptap/extension-link": "^3.0.7",
+    "@tiptap/extension-placeholder": "^3.0.7",
+    "@tiptap/extension-text-align": "^3.0.7",
+    "@tiptap/extension-text-style": "^3.0.7",
+    "@tiptap/extension-underline": "^3.0.7",
+    "@tiptap/react": "^3.0.7",
+    "@tiptap/starter-kit": "^3.0.7",
     "@vercel/analytics": "^1.1.1",
     "chart.js": "^4.4.7",
     "class-variance-authority": "^0.7.1",
@@ -28,6 +42,7 @@
     "lucide-react": "^0.475.0",
     "next": "^15.2.4",
     "next-sitemap": "^4.2.3",
+    "next-themes": "^0.4.6",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
@@ -36,7 +51,8 @@
     "reveal-on-scroll-react": "^0.0.6",
     "schema-dts": "^1.1.5",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.6"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
